--- a/src/main.ini
+++ b/src/main.ini
@@ -21,7 +21,7 @@ Verbose=On
 Library_Path="/usr/share/povray-3.7"
 Library_Path="/usr/share/povray-3.7/ini"
 Library_Path="/usr/share/povray-3.7/include"
-Library_Path="src/texture"
+Library_Path="./texture"
 
 ; file output
 Output_to_File=true
